Fix wrong size for zoom buttons

--- a/contribs/gmf/less/mobile.less
+++ b/contribs/gmf/less/mobile.less
@@ -165,7 +165,8 @@ span.twitter-typeahead {
   }
 }
 
-.ol-control button {
+.ol-control button,
+.ol-touch .ol-control button {
   font-size: 1em;
 }
 .ol-zoom {
